Overflow fix for mobile

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -82,6 +82,10 @@ body {
     }
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 .preload * {
     transition: none !important;
 }
